--- a/whistle-ui/static/bucket.html
+++ b/whistle-ui/static/bucket.html
@@ -99,9 +99,7 @@
 
    <div class="row">
         <div class="well">
-            <input type="textbox"
-                   value="{{ bucket_data.bucket[0].user_message }}">
-
+            <textarea ng-model="bucket_data.bucket[0].user_message"/><br/>
             <button class="btn btn-primary" type="button" ng-click="save_user_message()">Save</button>
         </div>
     </div>
