--- a/whistle-ui/static/index.html
+++ b/whistle-ui/static/index.html
@@ -41,7 +41,7 @@
 
   <body ng-app="whistleApp" class="test-container">
 
-    <nav class="navbar navbar-inverse navbar-embossed">
+    <nav class="navbar  navbar-embossed">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -50,19 +50,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img style="float: left;" src="whistle.png" alt="Whistle" height="42" width="42">
-          <a class="navbar-brand" href="#">Whistle</a>
+          <img style="float: left;" src="sortinghat.png" alt="Sortinghat" height="42" width="42">
+          <a class="navbar-brand" href="#">Sorting Hat</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
               <li>
-                 <a href="/central/">Alerts</a>
-              </li>
-              <li>
-                 <a href="/central/customers/">Dashboard</a>
-              </li>
-              <li>
-                 <a href="/#/category/prod">Log Analysis</a>
+                 <a href="/#/category/prod">Production</a>
               </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
