Start move to a new name: Sorting Hat

--- a/whistle-ui/static/index.html
+++ b/whistle-ui/static/index.html
@@ -41,7 +41,7 @@
 
   <body ng-app="whistleApp" class="test-container">
 
-    <nav class="navbar  navbar-embossed">
+    <nav class="navbar  navbar-embossed navbar-inverse">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
