--- a/sortinghat-ui/static/index.html
+++ b/sortinghat-ui/static/index.html
@@ -41,7 +41,7 @@
 
   <body ng-app="whistleApp" class="test-container">
 
-    <nav class="navbar  navbar-embossed navbar-inverse">
+    <nav class="navbar  navbar-default">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -50,8 +50,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <img style="float: left;" src="sortinghat.png" alt="Sortinghat" height="42" width="42">
-          <a class="navbar-brand" href="#">Sorting Hat</a>
+          <a class="navbar-brand" href="#"><b>Sorting Hat</b></a>
+          <img class="navbar-brand" style="float: left;" src="sortinghat.png" alt="Sortinghat" height="52" width="52">
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
