--- a/sortinghat-ui/static/index.html
+++ b/sortinghat-ui/static/index.html
@@ -58,6 +58,9 @@
               <li>
                  <a href="/#/category/prod">Production</a>
               </li>
+            <li>
+                 <a href="https://bitbucket.org/platform9/sortinghat">Source Code</a>
+              </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
               <li><a href="#/settings/">Settings</a></li>
