--- a/sortinghat-ui/static/index.html
+++ b/sortinghat-ui/static/index.html
@@ -39,10 +39,11 @@
     <![endif]-->
   </head>
 
-  <body ng-app="whistleApp" class="test-container">
+  <body ng-app="whistleApp" >
 
+    <div class="container">
     <nav class="navbar  navbar-default">
-      <div class="container">
+      <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -59,6 +60,9 @@
                  <a href="/#/category/prod">Production</a>
               </li>
             <li>
+                 <a href="export.html">Export (coming soon)</a>
+              </li>
+            <li>
                  <a href="https://bitbucket.org/platform9/sortinghat">Source Code</a>
               </li>
           </ul>
@@ -68,7 +72,7 @@
           </ul>
         </div>
        </div>
-    </nav>
+    </nav></div>
 
     
     <div class="container">
