Changes to skip empty messages and parse out the log_name from the message

--- a/sortinghat-ui/static/index.html
+++ b/sortinghat-ui/static/index.html
@@ -11,7 +11,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Welcome to 'Whistle'</title>
+    <title>Sort your errors</title>
 
           <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
@@ -91,5 +91,6 @@
     <script src="js/whistle.js" ></script>
     <script src="js/truncate.js" ></script>
     <script src="js/time_utils.js"></script>
+    <script src="js/highlight.js"></script>
   </body>
 </html>
