--- a/sortinghat-ui/static/bucket.html
+++ b/sortinghat-ui/static/bucket.html
@@ -107,7 +107,7 @@
 
     <div class="row">
         <div class="well">
-        {{ bucket_data.bucket[0].canonical_message }}
+        {{ bucket_data.bucket[0].canonical_message | highlight_vars }}
         </div>
     </div>
 
