--- a/sortinghat-ui/static/bucket.html
+++ b/sortinghat-ui/static/bucket.html
@@ -106,8 +106,7 @@
 
 
     <div class="row">
-        <div class="well">
-        {{ bucket_data.bucket[0].canonical_message | highlight_vars }}
+        <div class="well" ng-bind-html="bucket_data.bucket[0].canonical_message | highlight_vars">
         </div>
     </div>
 
